# bravia-quad-homeassistant

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASES.md  hacs.json  pyproject.toml  requirements.txt  requirements_dev.txt  test_async_bravia.py  test_bravia_connection.py
.devcontainer/: devcontainer.json
.devcontainer/scripts/: set_network_mode.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labels.yml  release-drafter.yml  renovate.json
.github/workflows/: ci-changes.yml  hacs.yml  hassfest.yml  label-check.yml  labels.yml  lint.yml  pr-labels.yaml  pre-release-drafter.yml  release-drafter.yml  release.yml  tests.yml  validation.yml
blueprints/: source_based_config.yaml
config/: configuration.yaml
custom_components/bravia_quad/: __init__.py  __version__.py  bravia_grpc_client.py  bravia_http_client.py  bravia_quad_client.py  button.py  config_flow.py  const.py  entity.py  external_control.py  grpc_entity_registry.py  grpc_mapped_entities.py  grpc_mapping.py  grpc_media_player.py  grpc_refresh.py  grpc_seeds_seed.py  grpc_tcp_seed.py  grpc_value_normalize.py  helpers.py  icons.json  manifest.json  media_player.py  number.py  select.py  sensor.py  strings.json  switch.py  transport.py  update.py
custom_components/bravia_quad/grpc/: __init__.py  all_field_paths.txt  bravia_control.proto  bravia_control_pb2.py  bravia_control_pb2_grpc.py  client.py  credentials.py  exec_command_request.py  get_capabilities_response.py  get_nonce_request.py  get_states_auth.py  get_states_request.py  get_states_response.py  notify_decode.py
custom_components/bravia_quad/translations/: en.json  (+2 more)
docs/: README.md  configuration.md  development.md  device-compatibility.md  entities.md  grpc-auth-lifecycle.md  grpc-setup.md  grpc-tcp-mapping.md  reverse-engineering-bravia-connect.md  seeds-cloud-states.md  sony-grpc-reference.md  tcp-protocol.md  troubleshooting.md
scripts/: __init__.py  check_connection.py  check_connection_async.py  develop  forbid_private_commit.sh  lint  setup  simulate_disconnect.py  update_manifest_version.py
scripts/grpc/: README.md  device_scrape_report.py  get_session_keys.py  http_54545_catalog.py  scrape_auth_gate.py  scrape_device_capabilities.py  session_keys_example.json
tests/: __init__.py  conftest.py  test_bravia_http_client.py  test_button.py  test_config_flow.py  test_device_scrape_report.py  test_exec_command_request.py  test_exec_serialize.py  test_external_control.py  test_forbid_private_commit.py  test_get_capabilities.py  test_get_nonce_request.py  test_get_session_keys.py  test_get_states_auth.py  test_get_states_request.py  test_get_states_response.py  test_grpc_availability.py  test_grpc_client_exec_recovery.py  test_grpc_credentials.py  test_grpc_entity_seeding.py  test_grpc_exec_command.py  test_grpc_mapped_entities.py  test_grpc_mapping.py  test_grpc_media_player_playback.py  test_grpc_oauth.py  test_grpc_only_entities.py  test_grpc_reconnect.py  test_grpc_seeds_seed.py  test_grpc_subwoofer_detect.py  test_grpc_supplemental_fetch.py  test_grpc_value_normalize.py  test_helpers.py  test_init.py  test_init_grpc_refresh.py  test_media_player.py  test_notifications.py  test_notify_decode.py  test_number.py  test_reconnect_fetch.py  test_reconnection.py  (+5 more)
tests/fixtures/: get_capabilities_minimal.json
