[project]
name = "bravia-theatre-homeassistant"
version = "0.0.0"
description = "Home Assistant custom integration for Sony Bravia Theatre AV amplifiers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>=2025.12.2",
    "pycares<5.0.2",  # pycares 5.0.0 is incompatible with aiodns 3.5.0 (upstream bug)
    "aiohttp>=3.8.0",
    "voluptuous>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "colorlog>=6.10.0",
    "pre-commit>=4.0.0",
    "yamllint>=1.37.1",
    "codespell>=2.4.1",
    "mypy>=1.18.2",
    "pytest-homeassistant-custom-component>=0.13.297",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false
disable_error_code = ["call-arg"]
